MenuRunner: Add comment to specify blocking behavior on MacViews.

On MacViews, the COMBOBOX and CONTEXT_MENU menu run types are always shown using
a native NSMenu which runs the run loop in NSEventTrackingRunLoopMode and
blocks. Hence the ASYNC run type is ignored for these menu run types on
MacViews. Add comment to that effect.

BUG=682544

Review-Url: https://codereview.chromium.org/2620203004
Cr-Commit-Position: refs/heads/master@{#445014}

Former-commit-id: 454b8e5ae37b38fc67695e8a149dbe4bc982f3de